@@ -24,6 +24,7 @@ OpenLDAP 2.4.24 Engineering
 	Fixed slapo-sssvlv initialization (ITS#6649)
 	Fixed slapo-syncprov to send error if consumer is newer (ITS#6606)
 	Fixed slapo-syncprov properly mutex filter (ITS#6708)
+	Fixed slapo-syncprov active mod race (ITS#6709)
 	Fixed contrib/nssov to only close socket on shutdown (ITS#6676)
 	Documentation
 		admin24 guide typo fixes (ITS#6609)
